# chatbot-security-scanner

./: LICENSE  MANUAL.md  README.md  pyproject.toml
examples/: README.md  demo-comparison.txt  sample-test-case.json
llmsec/: __init__.py  __main__.py  cli.py  evaluator.py  models.py  reporting.py  runner.py  scoring.py  suite.py
llmsec/data/: default_suite.json
llmsec/targets/: __init__.py  demo.py  openai_compatible.py
tests/: __init__.py  test_core.py  test_runner.py  test_runner_reporting_cli.py  test_targets.py
