[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsec-lab"
version = "0.1.0"
description = "Zero-dependency CLI lab for safely evaluating chatbot security controls."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "deedeetdt" }
]
keywords = ["llm", "security", "chatbot", "prompt-injection", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = []

[project.scripts]
llmsec = "llmsec.cli:main"

[tool.setuptools.packages.find]
include = ["llmsec*"]

[tool.setuptools.package-data]
llmsec = ["data/*.json"]
